<resources>
    <string name="app_name">Mynah</string>
    <string name="appSubtitle">Flash Card App</string>
    <string name="viewAll">View All</string>
    <string name="flashcard">Flashcards</string>
    <string name="allFlashCards">All Flash Cards</string>

    <string name="placeholderTitle">The Title Placeholder</string>
    <string name="placeholderNumOfCards">-# of Cards-</string>
    <string name="placeholderText">When it comes to reviewing concepts, nothing comes close to the
        effectiveness of flashcards. Mynah can help you easily create flash cards with its intuitive design.
        You can create, edit, and delete flash cards and arrange them in sets of you accrord. Create and review
        now!
    </string>

    <string-array name="alert_list">
        <item>Yes</item>
        <item>No</item>
    </string-array>

</resources>