<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/b1"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarSize="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:adjustViewBounds="false"
                    android:cropToPadding="false"
                    android:paddingTop="10dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/myna" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewAppName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="30dp"
                        android:fontFamily="@font/bungee"
                        android:includeFontPadding="false"
                        android:shadowColor="@color/white1"
                        android:text="@string/app_name"
                        android:textColor="@color/white1"
                        android:textSize="34sp" />

                    <TextView
                        android:id="@+id/textViewAppName2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="30dp"
                        android:fontFamily="sans-serif-medium"
                        android:includeFontPadding="false"
                        android:shadowColor="@color/white1"
                        android:text="@string/appSubtitle"
                        android:textColor="@color/white1"
                        android:textSize="20sp" />
                </LinearLayout>

            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scrollbarSize="0dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <androidx.cardview.widget.CardView
                        android:layout_width="240dp"
                        android:layout_height="300dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:backgroundTint="@color/pastel2"
                        android:padding="30dp"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="5dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:orientation="vertical"
                            android:padding="30dp"
                            android:paddingBottom="15dp">

                            <TextView
                                android:id="@+id/textView1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:breakStrategy="simple"
                                android:fontFamily="sans-serif-black"
                                android:includeFontPadding="false"
                                android:text="@string/placeholderTitle"
                                android:textColor="@color/black"
                                android:textSize="32sp"
                                app:autoSizeTextType="uniform" />

                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/placeholderNumOfCards"
                                android:textColor="@color/black"
                                android:textSize="16sp" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="240dp"
                        android:layout_height="300dp"
                        android:layout_margin="10dp"
                        android:backgroundTint="@color/pastel3"
                        android:padding="30dp"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="5dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:orientation="vertical"
                            android:padding="30dp"
                            android:paddingBottom="15dp">

                            <TextView
                                android:id="@+id/textView5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:autoText="false"
                                android:fontFamily="sans-serif-black"
                                android:text="@string/placeholderTitle"
                                android:textColor="@color/black"
                                android:textSize="32sp"
                                app:autoSizeTextType="uniform" />

                            <TextView
                                android:id="@+id/textView6"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/placeholderNumOfCards"
                                android:textColor="@color/black"
                                android:textSize="16sp" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <ImageButton
                        android:id="@+id/imageButton"
                        style="@android:style/Widget.Holo.Light.ImageButton"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_weight="1"
                        android:backgroundTint="#00FFFFFF"
                        android:scaleType="centerInside"
                        app:srcCompat="@drawable/add" />

                </LinearLayout>
            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/layout_curvetop"
                android:orientation="horizontal"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:background="@color/white1"
                android:orientation="vertical"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingBottom="30dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewCards"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:breakStrategy="simple"
                        android:fontFamily="sans-serif-black"
                        android:includeFontPadding="false"
                        android:text="@string/flashcard"
                        android:textColor="@color/black"
                        android:textSize="32sp"
                        app:autoSizeTextType="uniform"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/button"
                        style="@style/Widget.AppCompat.Button.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_weight="1"
                        android:gravity="right|center_vertical"
                        android:text="@string/viewAll"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="100"
                    android:singleLine="false"
                    android:text="@string/placeholderText" />

                <TextView
                    android:id="@+id/textViewCards3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:breakStrategy="simple"
                    android:fontFamily="sans-serif-black"
                    android:includeFontPadding="false"
                    android:text="@string/allFlashCards"
                    android:textColor="@color/black"
                    android:textSize="32sp"
                    app:autoSizeTextType="uniform" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:stretchColumns="*">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/layout_curveall"
                            android:backgroundTint="@color/pastel2"
                            android:elevation="3dp"
                            android:paddingLeft="20dp"
                            android:paddingTop="10dp"
                            android:paddingRight="20dp"
                            android:paddingBottom="10dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center_vertical"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/textView23"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="Set 1 Title"
                                    android:textColor="@color/black"
                                    android:textSize="24sp"
                                    android:textStyle="bold"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <TextView
                                    android:id="@+id/textView25"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="13 cards"
                                    android:textColor="@color/black"
                                    android:textSize="14sp"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />
                            </LinearLayout>

                            <ImageView
                                android:id="@+id/imageView16"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_gravity="right|center_vertical"
                                app:srcCompat="@drawable/iconplay" />


                        </LinearLayout>
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:stretchColumns="*">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/layout_curveall"
                            android:backgroundTint="@color/pastel1"
                            android:elevation="3dp"
                            android:padding="10dp"
                            android:paddingLeft="20dp"
                            android:paddingTop="10dp"
                            android:paddingRight="20dp"
                            android:paddingBottom="10dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center_vertical"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/textView14"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="Set 1 Title"
                                    android:textColor="@color/black"
                                    android:textSize="24sp"
                                    android:textStyle="bold"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <TextView
                                    android:id="@+id/textView24"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="13 cards"
                                    android:textColor="@color/black"
                                    android:textSize="14sp"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />
                            </LinearLayout>

                            <ImageView
                                android:id="@+id/imageView14"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_gravity="right|center_vertical"
                                app:srcCompat="@drawable/iconplay" />


                        </LinearLayout>
                    </TableRow>

                </TableLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>